# SDL-VSCode

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.cpp
